myStatus function update 4/5  proceeding  category.js update 3/4 proceeding  [ error fixed ]  navigation visible error 1/1 complete

--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -78,7 +78,7 @@
     margin-left: 10px;
     cursor: pointer;
 }
-.categoryList .size1{
+.categoryContainer .size1{
     margin-bottom: 10px;
     margin-left: 30px;
     cursor: pointer;
@@ -106,6 +106,7 @@
     float: left;
     position: absolute;
     bottom: 0px;
+    background: #537895;
 }
 .loginBox div{
     width: 50%;
